--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "commander": "5.1.0",
     "cors": "2.8.5",
     "deepcopy": "2.1.0",
+    "entropy-string": "^4.2.0",
     "express": "4.17.2",
+    "firebase-admin": "^11.3.0",
     "follow-redirects": "1.14.8",
     "graphql": "15.7.1",
     "graphql-list-fields": "2.0.2",
@@ -49,6 +51,7 @@
     "lodash": "4.17.21",
     "lru-cache": "6.0.0",
     "mime": "3.0.0",
+    "moment-timezone": "^0.5.39",
     "mongodb": "4.3.1",
     "mustache": "4.2.0",
     "parse": "3.4.1",
