--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@parse/fs-files-adapter": "1.2.1",
     "@parse/push-adapter": "4.1.0",
     "@parse/s3-files-adapter": "1.6.2",
+    "@sendgrid/mail": "^7.7.0",
     "apollo-server-express": "2.25.2",
     "bcryptjs": "2.4.3",
     "body-parser": "1.19.1",
@@ -55,6 +56,7 @@
     "mongodb": "4.3.1",
     "mustache": "4.2.0",
     "parse": "3.4.1",
+    "parse-server-sendgrid-adapter": "^1.0.0",
     "pg-monitor": "1.4.1",
     "pg-promise": "10.11.1",
     "pluralize": "8.0.0",
