--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "mongodb-runner": "4.8.1",
     "mongodb-version-list": "1.0.0",
     "node-fetch": "3.2.10",
+    "node-abort-controller": "3.0.1",
     "nyc": "15.1.0",
     "prettier": "2.0.5",
     "semantic-release": "17.4.6",
