--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "license": "BSD-3-Clause",
   "dependencies": {
     "@babel/eslint-parser": "7.19.1",
-    "@graphql-tools/schema": "9.0.12",
-    "@graphql-tools/utils": "9.1.3",
+    "@graphql-tools/merge": "8.3.6",
+    "@graphql-tools/schema": "9.0.4",
+    "@graphql-tools/utils": "8.12.0",
     "@parse/fs-files-adapter": "1.2.2",
     "@parse/push-adapter": "4.1.2",
     "@whatwg-node/fetch": "0.5.3",
     "bcryptjs": "2.4.3",
+    "body-parser": "1.20.1",
     "commander": "5.1.0",
     "deepcopy": "2.1.0",
     "express": "4.18.2",
