--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "gcloud": "^0.28.0",
     "mailgun-js": "^0.7.7",
     "mime": "^1.3.4",
-    "mongodb": "~2.1.0",
+    "mongodb": "^2.2.36",
     "multer": "^1.1.0",
     "node-gcm": "^0.14.0",
     "parse": "^1.7.0",
