--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "public_html/",
     "views/",
     "LICENSE",
-    "PATENTS",
+    "NOTICE",
     "postinstall.js",
     "README.md"
   ],
-  "license": "BSD-3-Clause",
+  "license": "Apache-2.0",
   "dependencies": {
     "@babel/eslint-parser": "7.19.1",
     "@graphql-tools/merge": "8.3.6",
