--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@graphql-tools/merge": "8.3.6",
     "@graphql-tools/schema": "9.0.4",
     "@graphql-tools/utils": "8.12.0",
-    "@graphql-yoga/node": "2.6.0",
+    "graphql-yoga": "3.9.1",
+    "@whatwg-node/fetch": "0.8.8",
     "@parse/fs-files-adapter": "1.2.2",
     "@parse/push-adapter": "4.1.2",
     "bcryptjs": "2.4.3",
